{{$NEXT}}

0.000009  2016-05-31 07:18:50-07:00 America/Los_Angeles

    - Require perl 5.10

0.000008  2016-05-30 07:38:55-07:00 America/Los_Angeles

    - Require newer Test2::AsyncSubtest

0.000007  2016-05-30 06:58:17-07:00 America/Los_Angeles

    - Complete rewrite

0.000006  2016-02-05 15:45:57-08:00 America/Los_Angeles

    - Prep for a new Trace::Mask version

0.000005  2016-02-05 11:56:11-08:00 America/Los_Angeles

    - Bump minimum Test2::Suite version (fixes issue found in windows tests)

0.000004  2016-02-04 21:48:07-08:00 America/Los_Angeles

    - Add Spec bundle

0.000003  2016-02-04 10:46:41-08:00 America/Los_Angeles

    - Fix test that needs to be conditional
    - Fix constant in NoIso

0.000002  2016-02-03 08:12:34-08:00 America/Los_Angeles

    - Major overhaul
    - Add isolation runners
    - Lots of fixes
    - Masking traces properly
    - Better filtering

0.000001  2016-01-18 10:54:17-08:00 America/Los_Angeles

    - Initial conversion from Test::Stream