@@ -21,7 +21,7 @@ repository.type = git
 [Prereqs]
 perl         = 5.010000
 Test2        = 0.000041
-Test2::Suite = 0.000027
+Test2::Suite = 0.000032
 Importer     = 0.012
 Carp         = 0
 Scalar::Util = 0
